<resources>
    <string name="app_name">NoPlanB</string>
    <string name="UpdateTask">Update Task</string>
    <string name="AddTask">Add Task</string>
    <string name="AddProject">Add Project</string>
    <string name="UpdateProject">Update Project</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="today">Today</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="projects">Projects</string>
    <string name="noplanb">NoPlanB</string>
    <string name="tasks">Tasks</string>
    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <string name="delete_project">Delete Project</string>
    <string name="delete_task">Delete Task</string>
    <string name="mark_as_complete">Mark as complete</string>
    <string name="mark_as_incomplete">Mark as incomplete</string>
    <string name="title">Title</string>
    <string name="schedule">Schedule</string>
    <string name="description">Description</string>
    <string name="clear">Clear</string>
    <string name="edit_project">Edit Project</string>
    <string name="overdue">Overdue</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>
    <string name="show_completed_projects">Show completed projects</string>
    <string name="hide_completed_projects">Hide completed projects</string>
    <string name="show_completed_tasks">Show completed tasks</string>
    <string name="hide_completed_tasks">Hide completed tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>