<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_update_project"
        android:title="@string/UpdateProject"
        android:icon="@drawable/ic_save"
        android:iconTint="@color/white"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_complete_project"
        android:title="@string/mark_as_complete"
        android:icon="@drawable/ic_completed"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/menu_incomplete_project"
        android:title="@string/mark_as_incomplete"
        android:icon="@drawable/ic_undo"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/menu_delete_project"
        android:title="@string/delete_project"
        android:icon="@drawable/ic_delete"
        android:iconTint="@color/white"
        app:showAsAction="always"
        />
</menu>