<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/todayTaskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.noplanb.noplanb.fragments.tasks.list.TaskListFragment"
        android:label="{labelText}"
        tools:layout="@layout/fragment_task_list"
    >
        <action
            android:id="@+id/action_taskListFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
        <action
            android:id="@+id/action_taskListFragment_to_updateTaskFragment"
            app:destination="@id/updateTaskFragment" />
        <action
            android:id="@+id/action_taskListFragment_to_projectListFragment"
            app:destination="@id/projectListFragment" />
        <argument
            android:name="projectId"
            app:argType="integer"
            android:defaultValue="1" />

        <argument
            android:name="labelText"
            app:argType="string"
            android:defaultValue="NoPlanB" />
        <action
            android:id="@+id/action_taskListFragment_to_updateProjectFragment"
            app:destination="@id/updateProjectFragment" />

    </fragment>
    <fragment
        android:id="@+id/projectListFragment"
        android:name="com.noplanb.noplanb.fragments.projects.list.ProjectListFragment"
        android:label="Projects"
        tools:layout="@layout/fragment_project_list" >
        <action
            android:id="@+id/action_projectListFragment_to_addProjectFragment"
            app:destination="@id/addProjectFragment" />
        <action
            android:id="@+id/action_projectListFragment_to_taskListFragment"
            app:destination="@id/taskListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.noplanb.noplanb.fragments.tasks.add.AddTaskFragment"
        android:label="@string/AddTask"
        tools:layout="@layout/fragment_add_task" >
        <action
            android:id="@+id/action_addTaskFragment_to_taskListFragment"
            app:destination="@id/taskListFragment"
            app:popUpTo="@id/taskListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="currentProjectId"
            app:argType="integer"
            android:defaultValue="1"/>
    </fragment>
    <fragment
        android:id="@+id/updateTaskFragment"
        android:name="com.noplanb.noplanb.fragments.tasks.update.UpdateTaskFragment"
        android:label="@string/UpdateTask"
        tools:layout="@layout/fragment_update_task" >
        <action
            android:id="@+id/action_updateTaskFragment_to_taskListFragment"
            app:destination="@id/taskListFragment"
            app:popUpTo="@id/taskListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="currentItem"
            app:argType="com.noplanb.noplanb.data.models.TaskWithProject" />
    </fragment>
    <fragment
        android:id="@+id/addProjectFragment"
        android:name="com.noplanb.noplanb.fragments.projects.add.AddProjectFragment"
        android:label="@string/AddProject"
        tools:layout="@layout/fragment_add_project" >
        <action
            android:id="@+id/action_addProjectFragment_to_projectListFragment"
            app:destination="@id/projectListFragment"
            app:popUpTo="@id/projectListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/updateProjectFragment"
        android:name="com.noplanb.noplanb.fragments.projects.update.UpdateProjectFragment"
        android:label="@string/UpdateProject"
        tools:layout="@layout/fragment_update_project" >
        <argument
            android:name="currentItem"
            app:argType="com.noplanb.noplanb.data.models.Project" />
        <action
            android:id="@+id/action_updateProjectFragment_to_taskListFragment"
            app:destination="@id/taskListFragment"
            app:popUpTo="@id/taskListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/todayTaskListFragment"
        android:name="com.noplanb.noplanb.fragments.tasks.list.TodayTaskListFragment"
        android:label="Today"
        tools:layout="@layout/fragment_today_task_list" />
</navigation>